[package]
name = "rustlsm"
version = "0.1.0"
authors = ["Stuart Glaser <stuglaser@gmail.com>"]
edition = "2018"

[dependencies]
nom = "^4.0"
tempfile = "3.0"
byteorder = "1.2"
rand = "0.5"
uuid = { version = "0.7", features = ["v4"] }
owning_ref = "0.4.0"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "sstable_bench"
harness = false